Adds hooks to gemerate swagger end point
